Update Integer and Double definitions